--- a/Dockerfile.txt
+++ b/Dockerfile.txt
@@ -1,8 +1,8 @@
 FROM python:3.9.7
 
 ADD main.py .
-RUN pip install fastapi[all]
 COPY . .
+RUN pip install -r requirements.txt
 WORKDIR .
 EXPOSE 8080
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8080"]
+CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "80"]
